Update GEE notebook with L8 example

--- a/ee-sandbox.ipynb
+++ b/ee-sandbox.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "import ee\n",
+    "from pprint import pprint\n",
     "from IPython.display import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -29,7 +30,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "dataset_path = 'LANDSAT/LC08/C01/T1_TOA'\n",
+    "path = 3\n",
+    "row = 69\n",
+    "start_date = '2016-01-01'\n",
+    "end_date = '2017-01-01'\n",
+    "\n",
+    "collection = ee.ImageCollection(dataset_path) \\\n",
+    "    .filter(ee.Filter.eq('WRS_PATH', path)) \\\n",
+    "    .filter(ee.Filter.eq('WRS_ROW', row)) \\\n",
+    "    .filterDate(start_date, end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "filtered = collection.filterMetadata('CLOUD_COVER', 'less_than', ee.Number(25.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "img = ee.Image(filtered.sort('CLOUD_COVER').first())\n",
+    "url = img.getThumbUrl()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(img.get('CLOUD_COVER').getInfo())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -39,41 +106,19 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"https://earthengine.googleapis.com/api/thumb?thumbid=c73597a76ba476a6a56063e7b5eb8986&token=3ae25c76e239fd6d823cc9203694d6e6\"/>"
+       "<img src=\"https://earthengine.googleapis.com/api/thumb?thumbid=46bdb9b18166985bd5e243c6fb5c0ced&token=3856ef8c210b169dfa16109e2b1f501f\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = ee.Image('CGIAR/SRTM90_V4').getThumbUrl({'min' : 0, 'max' : 3000})\n",
     "Image(url=url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('test')"
    ]
   },
   {
@@ -88,21 +133,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
