Add MODIS timeseries, new training data nb

--- a/ucayali-testing.ipynb
+++ b/ucayali-testing.ipynb
@@ -177,7 +177,7 @@
     "for sat, path, row, date in image_list[0:100]:\n",
     "    dataset_path = datasets[sat]\n",
     "    year, month, day = map(int, date.split('-'))\n",
-    "    filename = 'pan/{}_{}{}{}_{}{}.tif'.format(sat, year, month, day, path, row)\n",
+    "    filename = 'pan/{}_{}{:02d}{:02d}_{:03d}{:03d}.tif'.format(sat, year, month, day, path, row)\n",
     "    \n",
     "    try:\n",
     "        im = get_landsat_image(path, row, year, month, day, dataset_path=dataset_path)\n",
